# odoo

./: pyproject.toml
