[project]
name = "odoo"
version = "18.0"
description = "Odoo Server"
authors = [
    { name = "OpenERP S.A.", email = "info@odoo.com" }
]
dependencies = [
    "Babel==2.9.1 ; python_version < '3.11'",
    "Jinja2",
    "MarkupSafe",
    "Pillow==9.0.1 ; python_version <= '3.10'",
    "PyPDF2",
    "werkzeug==3.0.0",
    "XlsxWriter==3.0.2 ; python_version < '3.12'",
    "asn1crypto",
    "babel>=1.0",
    "cbor2",
    "chardet",
    "cryptography",
    "decorator",
    "docutils",
    "freezegun==1.1.0 ; python_version < '3.11'",
    "geoip2",
    "gevent",
    "greenlet",
    "idna",
    "libsass",
    "lxml",
    "lxml-html-clean ; python_version >= '3.12'",
    "num2words",
    "ofxparse",
    "openpyxl",
    "passlib",
    "pillow",
    "polib",
    "psutil",
    "psycopg2>=2.2",
    "pyopenssl",
    "pypiwin32 ; sys_platform == 'win32'",
    "pyserial",
    "python-dateutil",
    "python-ldap==3.4.0 ; sys_platform != 'win32' and python_version < '3.12'",
    "python-stdnum",
    "pytz",
    "pyusb>=1.0.0b1",
    "qrcode",
    "reportlab",
    "requests",
    "rjsmin",
    "rl-renderPM==4.0.3 ; sys_platform == 'win32' and python_version >= '3.12'",
    "urllib3",
    "vobject",
    "werkzeug",
    "xlrd",
    "xlsxwriter",
    "xlwt",
    "zeep",
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "LGPL-3" }

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
